# tba

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  INFORME_COMPLETO.md  INFORME_TESTS_COMPRAS.md  README.md  REPORTE_CORRECCION_COMPRAS.md  batch_fix_bodega.py  check_inconsistencies.py  documentation.html  dump-colegio-202511301030.sql  dump-colegio-202602261314.sql  error_page.html  error_traceback.txt  fix_profesor.py  importar_permisos.py  main.py  manage.py  package-lock.json  package.json  permisos.md  pyproject.toml  pytest.ini  pytest_selenium_log.txt  pytest_selenium_log2.txt  pytest_selenium_log3.txt  pytest_selenium_log4.txt  pytest_selenium_log5.txt  pytest_selenium_long_error.txt  requerimientos.docx  requirements-dev.txt  requirements.txt  test_log.txt  total.xlsx
core/: admin.py  auditoria.py  authz.py  middleware_auditoria.py  mixins.py  models.py  settings.py  settings_test.py  urls.py  wsgi.py
docColegio/: Compra insumos aseo y alimentación abril 2025.xlsx  Compras TBA 2025.docx  INVENTARIO MUSICA 2025.xlsx  Inventario E Fisica 2024.xlsx  Inventario Laboratorio 2024.docx  Lista Aseo.docx  SOLICITUD DE MATERIALES DÍA DE LAS HUMANIDADES 2024.docx
docs/: autorizacion-erp-escolar.md
fixtures/: initial_data.json
scripts/: download_pg_db.ps1
templates/: 404.html  500.html  dashboard-analytics.html  index.html
tests/: PLAN_TESTING_VISUAL.md  ROL_PERMISOS_UI.md  TEMPLATES_DESALINEADOS.md  conftest.py  factories_globales.py  test_authorization.py  test_auto_code_generation.py  test_flujo_activos.py  (+9 more)
(+670 files in other folders)
