[project]
name = "colegio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref",
    "crispy-bootstrap5",
    "django==5.2.7",
    "django-allauth==65.12.1",
    "django-crispy-forms==2.4",
    "django-environ==0.12.0",
    "factory-boy==3.3.1",
    "faker==33.1.0",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pillow==12.0.0",
    "psycopg2-binary",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-django==4.9.0",
    "reportlab>=4.4.5",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
]
